--- a/Trabalho APSOO/.classpath
+++ b/Trabalho APSOO/.classpath
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/postgresql-42.2.20"/>
+	<classpathentry kind="lib" path="C:/Users/nat_m/Downloads/postgresql-42.2.20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
